--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -13,6 +13,17 @@
             <h1>Новостной сайт</h1>
             <div class="row">
                 <div class="col-8">
+                    <div class="col-4">
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <div class="alert alert-warning" role="alert">
+                                {% for message in messages %}
+                                    {{ message }}<br>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+                    {% endwith %}
+                    </div>
                     <h2>Новости</h2>
                     {% for obj in news  %}
                         <h3>
