--- a/webapp/templates/menu.html
+++ b/webapp/templates/menu.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+  <html lang="en">
+  <head>
     <meta charset="UTF-8">
     <title>Title</title>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Новости Python</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{ url_for('news.index') }}">Главная страница</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="{{ url_for('user.login') }}">Логин</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="{{ url_for('user.logout') }}">Выход</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Поиск</button>
-      </form>
-    </div>
-  </div>
-</nav>
-</body>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('news.index') }}">Новости Python</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{{ url_for('news.index') }}">Главная страница</a>
+            </li>
+            {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <span class="nav-link">Привет, {{ current_user.name }}</span>
+              </li>
+            {% endif %}
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Искать!</button>
+          </form>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if current_user.is_authenticated %}
+              {%if current_user.is_admin%}
+                <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('admin.admin_index') }}">Админка</a>
+                </li>
+              {% endif %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('user.logout') }}">Выйти</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('user.register') }}">Регистрация</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('user.login') }}">Войти</a>
+              </li>
+              {% endif %}
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
