--- a/webapp/templates/news/index.html
+++ b/webapp/templates/news/index.html
@@ -17,7 +17,7 @@
             <h2>Новости</h2>
             {% for obj in news  %}
                 <h3>
-                    <a href="{{ obj.url }}">{{ obj.title }}</a>
+                    <a href="{{ url_for('news.single_news', news_id=obj.id) }}">{{ obj.title }}</a>
                 </h3>
                 <p><time datetime="{{ obj.published }}">{{ obj.published.strftime('%d.%m.%Y') }}</time></p>
             <hr>
