--- a/webapp/templates/user/login.html
+++ b/webapp/templates/user/login.html
@@ -3,16 +3,8 @@
 {% block content %}
     <div class="row">
         <div class="col-4">
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    <div class="alert alert-warning" role="alert">
-                        {% for message in messages %}
-                            {{ message }}<br>
-                        {% endfor %}
-                    </div>
-                {% endif %}
-            {% endwith %}
-            <form action="{{ url_for('user.process_login') }}", method="post">
+            {% include('messages.html') %}
+            <form action="{{ url_for('user.process_login', next=request.full_path) }}", method="post">
                 {{ form.hidden_tag() }}
                 <div class="form-group">
                     {{ form.username.label }}
