--- a/webapp/templates/user/registration.html
+++ b/webapp/templates/user/registration.html
@@ -3,16 +3,8 @@
 {% block content %}
     <div class="row">
         <div class="col-4">
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="alert alert-danger" role="alert">
-                            {{ message }}<br>
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-            <form action="{{ url_for('user.process_reg') }}", method="post">
+            {% include('messages.html') %}
+            <form action="{{ url_for('user.process_reg', next=request.full_path) }}", method="post">
                 {{ form.hidden_tag() }}
                 <div class="form-group">
                     {{ form.username.label }}
